Personalize some text in ad-input.

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -79,7 +79,8 @@
                     <small>(valgfritt, kun om det er aktuelt)</small>
                     <%= f.text_field :registration_number, class: 'u-full-width', placeholder: "Regnr" %>
                     <div class="help-box u-push-down">
-                    Dersom båten ikke er registrert eller du ikke har registreringsnummer tilgjengelig, vil du bli nødt til å dokumentere eierskap ved eventuelle skader/tap.
+                    Dersom båten din ikke er registrert eller du ikke har registreringsnummeret tilgjengelig, vil du ved skader/tap bli nødt til å dokumentere at du eier båten.
+                    .
                 </div>
                 </div>
             </div>
