Personalize input errors.

--- a/app/views/ads/_ad_input_errors.html.erb
+++ b/app/views/ads/_ad_input_errors.html.erb
@@ -5,7 +5,7 @@
     <div class="ad-input-errors">
         <p>
             Annonsen er lagret.
-            Før du kan legge den ut må du endre følgende:
+            Du må rette følgende feil før du kan legge den ut:
         </p>
         <ul  class="ad-input-errors__list">
             <% errors.each do |e| %>
