--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -193,9 +193,9 @@
             <%= form_for( PayinRule.new, url: (ad_payin_rules_path @ad), data: { new_rule_form: '' } ) do |f| %>
 
                 <div class="help-box u-push-down">
-                    Pris per enkelt dag må være minst 99 kr.
+                    Pris per enkelt dag må være minst kr 99,-
                     Vil du gi en lavere pris per dag ved lengre
-                    leieforhold kan du gjøre det her.
+                    leieforhold, kan du gjøre det her.
                 </div>
                 <div>
                     <span class="main-price__label">Ved utleie over</span>
