Made side by sie calendar and image work

--- a/app/assets/stylesheets/_ad_title_image.scss
+++ b/app/assets/stylesheets/_ad_title_image.scss
@@ -12,6 +12,10 @@
         @media (min-width: $tablet) {
             height: 600px;
         }
+
+        @media (min-width: $bigscreen) {
+            height: 464px;
+        }
     }
 
     &__bg_img {
