Push down booking box in sidebar

--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -28,7 +28,7 @@
             <%= render partial: "ad_feedback_list_section", locals: { ad: @ad } %>
         </div>
         <div class="four columns">
-            <div class="u-not-on-bigscreen">
+            <div class="u-not-on-bigscreen u-push-down">
                 <%= render partial: "ad_booking_box", locals: { ad: @ad } %>
             </div>
         </div>
