--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,7 +1,9 @@
 <%= form_for(@booking) do |f| %>
     <% if @booking.errors.any? %>
         <div id="error_explanation">
-            <h2><%= pluralize(@booking.errors.count, "error") %> prohibited this booking from being saved:</h2>
+            <h2>
+                <%= pluralize(@booking.errors.count, "error") %> prohibited this booking from being saved:
+            </h2>
 
             <ul>
                 <% @booking.errors.full_messages.each do |message| %>
@@ -78,45 +80,42 @@
         <div class="row">
             <div class="seven columns">
 
-<div class="u-push-down">
-    <% if current_user.user_payment_cards.card_valid.length > 1 %>
-        Velg det kredittkortet du ønsker å betale med:
-        <%# would have been nice to call the field below for user_payment_card_guid %>
-        <%# FIXME: auto-select favorite card %>
-        <%= f.collection_select( :user_payment_card_id, @booking.from_user.user_payment_cards.card_valid.decorate, :guid, :pretty_view ) %>
-    <% elsif current_user.user_payment_cards.card_valid.length == 1 %>
-    Reservasjonen skal belastes på følgende kredittkort:
-        <%= f.label 'user_payment_card_id', @booking.from_user.user_payment_cards.card_valid.decorate.first.pretty_view %>
-        <%= f.hidden_field 'user_payment_card_id', value: @booking.from_user.user_payment_cards.card_valid.decorate.first.guid %>
-    <% elsif current_user.user_payment_cards.card_valid.length < 1 %>
-
-Du må registrere kredittkortet ditt før du kan sende en forespørsel.
-    <% end %>
-</div>
-
-
+                <div class="u-push-down">
+                    <% if current_user.user_payment_cards.card_valid.length > 1 %>
+                        Velg det kredittkortet du ønsker å betale med:
+                        <%# would have been nice to call the field below for user_payment_card_guid %>
+                        <%# FIXME: auto-select favorite card %>
+                        <%= f.collection_select( :user_payment_card_id, @booking.from_user.user_payment_cards.card_valid.decorate, :guid, :pretty_view ) %>
+                    <% elsif current_user.user_payment_cards.card_valid.length == 1 %>
+                        Reservasjonen skal belastes på følgende kredittkort:
+                        <%= f.label 'user_payment_card_id', @booking.from_user.user_payment_cards.card_valid.decorate.first.pretty_view %>
+                        <%= f.hidden_field 'user_payment_card_id', value: @booking.from_user.user_payment_cards.card_valid.decorate.first.guid %>
+                    <% elsif current_user.user_payment_cards.card_valid.length < 1 %>
+                        Du må registrere kredittkortet ditt før du kan sende en forespørsel.
+                    <% end %>
+                </div>
             </div>
         </div>
 
-    <div class="help-box">
-        Om du har dekning på kredittkortet ditt, sendes forespørselen
-        til utleieren. Du blir kun belastet om din forespørsel blir
-        godkjent av utleier. Dersom ikke, blir pengene tilbakeført til
-        din konto.
-    </div>
+        <div class="help-box">
+            Om du har dekning på kredittkortet ditt, sendes forespørselen
+            til utleieren. Du blir kun belastet om din forespørsel blir
+            godkjent av utleier. Dersom ikke, blir pengene tilbakeført til
+            din konto.
+        </div>
 
 
         <div class="actions u-push-down">
             <% unless current_user.user_payment_cards.length == 0 %>
                 <%= f.submit class: "button button-primary", data: {controller: 'disableOnSubmit'} %>
             <% else %>
-            Du må ha registrert ditt kredittkort før du kan gjennomføre en booking. Du kan registrere ditt kredittkort <%= link_to 'HERE', new_user_payment_card_path %>.
+                Du må ha registrert ditt kredittkort før du kan gjennomføre en booking. Du kan registrere ditt kredittkort <%= link_to 'HERE', new_user_payment_card_path %>.
             <% end %>
         </div>
 
-    <p>
-      <%= image_tag "logos/mangopay_powered_590x53.png", alt: "Powered by MangoPay", class: "", size: "270x26" %>
-    </p>
+        <p>
+            <%= image_tag "logos/mangopay_powered_590x53.png", alt: "Powered by MangoPay", class: "", size: "270x26" %>
+        </p>
 
     </div>
 <% end %>
