Limit box width on blue boxes

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -11,6 +11,7 @@ $desktop: 960px;
 $bigscreen: 1200px;
 $flex-collapse: 512px;
 
+$sane-box-max-width: 600px;
 
 $standard-spacing: 12px;
 $large-spacing: $standard-spacing * 3;
