--- a/app/views/users/_public_profile_feedback.html.erb
+++ b/app/views/users/_public_profile_feedback.html.erb
@@ -1,6 +1,6 @@
 <%= link_to users_feedback_path(feedback), class: 'public-profile-feedback' do %>
     <div class="public-profile-feedback__avatar-box">
-        <%= render 'shared/avatar', user: feedback.from_user %>
+        <%= avatar_image(feedback.from_user, :medium) %>
         <br>
         <%= feedback.from_user.display_name %>
     </div>
