Added helper for rendering stars, and removed the partial

--- a/app/views/bookings/_booking_heading_box.html.erb
+++ b/app/views/bookings/_booking_heading_box.html.erb
@@ -19,7 +19,7 @@
                 <div class="booking-heading__name">
                     <%= other_user.display_name %>
                     <br>
-                    <%= render('shared/stars.html', rating: other_user.feedback_score ) %>
+                    <%= stars(other_user.feedback_score, :medium) %>
                 </div>
             </div>
         </div>
