--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,27 +4,26 @@
             <h1><%= @user.display_name_posessive %> profil</h1>
 
             <% if @user.about.present? %>
-                <section class="profile-self-ads-section u-push-down">
-                    <h2>Om meg</h2>
-                    <%=h @user.about %>
-                </section>
+                 <%= render layout: 'gray_box', locals: {title: 'Om meg'} do %>
+                    <p class="profile-about"><%= h @user.about %></p>
+                  <% end %>
             <% end %>
 
             <section class="profile-self-ads-section u-push-down">
                 <h2>Annonser</h2>
                 <% if @user.published_ads.empty? %>
-                  <%= @user.display_name %> har ikke lagt ut noe til leie ennå.
+                    <%= @user.display_name %> har ikke lagt ut noe til leie ennå.
                 <% else %>
-                  <%= render partial: 'public_profile_ad', collection: @user.published_ads, as: :ad %>
+                    <%= render partial: 'public_profile_ad', collection: @user.published_ads, as: :ad %>
                 <% end %>
             </section>
 
             <section class="profile-self-ads-section u-push-down">
                 <h2>Tilbakemeldinger</h2>
                 <% if @user.recent_feedback.empty? %>
-                  <%= @user.display_name %> har ikke mottatt noen tilbakemeldinger ennå.
+                    <%= @user.display_name %> har ikke mottatt noen tilbakemeldinger ennå.
                 <% else %>
-                  <%= render partial: 'public_profile_feedback', collection: @user.recent_feedback, as: :feedback %>
+                    <%= render partial: 'public_profile_feedback', collection: @user.recent_feedback, as: :feedback %>
                 <% end %>
             </section>
         </div>
