--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -83,7 +83,7 @@
 }
 
 .public-profile-ad {
-    @extend .standard-box;
+    @extend .standard-box--nested;
     display: flex;
     align-items: center;
     text-decoration: none;
