--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,17 +4,18 @@
             <h1><%= @user.display_name_posessive %> profil</h1>
 
             <% if @user.about.present? %>
-                 <%= render layout: 'gray_box', locals: {title: 'Om meg'} do %>
+                <%= render layout: 'gray_box', locals: {title: 'Om meg'} do %>
                     <p class="profile-about"><%= h @user.about %></p>
-                  <% end %>
+                <% end %>
             <% end %>
 
             <section class="profile-self-ads-section u-push-down">
-                <h2>Annonser</h2>
-                <% if @user.published_ads.empty? %>
-                    <%= @user.display_name %> har ikke lagt ut noe til leie ennå.
-                <% else %>
-                    <%= render partial: 'public_profile_ad', collection: @user.published_ads, as: :ad %>
+                <%= render layout: 'gray_box', locals: {title: 'Annonser', nopad: true} do %>
+                    <% if @user.published_ads.empty? %>
+                        <%= @user.display_name %> har ikke lagt ut noe til leie ennå.
+                    <% else %>
+                        <%= render partial: 'public_profile_ad', collection: @user.published_ads, as: :ad %>
+                    <% end %>
                 <% end %>
             </section>
 
