--- a/app/assets/stylesheets/_notification_box.scss
+++ b/app/assets/stylesheets/_notification_box.scss
@@ -26,10 +26,9 @@
     }
 
     &__avatar {
+        flex: 0 0 auto;
         width: 66px;
         text-align: center;
-        flex-grow: 0;
-        flex-shrink: 0;
     }
 
     &__body {
