--- a/app/assets/stylesheets/feedbacks.scss
+++ b/app/assets/stylesheets/feedbacks.scss
@@ -15,8 +15,7 @@
         border-bottom: 1px solid $color-gray-background;
 
         &-img-box {
-            flex-grow: 0;
-            flex-shrink: 0;
+            flex: 0 0 auto;
             margin-right: $standard-spacing * 2;
         }
 
