location now uses guid as key. this should make things safer.

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -95,8 +95,8 @@
                 <div data-controller="addressSelectionDimmer">
                     <%= hidden_field_tag "create_new_location", "0" %>
 
-                    <%= select( :ad, :location_id,
-                                @ad.user.locations.map{ |l| ["#{l.address_line}, #{l.post_code} #{l.city}", l.id] },
+                    <%= select( :ad, :location_guid,
+                                @ad.user.locations.map{ |l| [l.to_s_pretty, l.guid] },
                                 {},
                                 { class: 'u-full-width' } ) %>
 
