--- a/app/views/users/edit_user_payment_account.html.erb
+++ b/app/views/users/edit_user_payment_account.html.erb
@@ -24,7 +24,7 @@
               <div class="eight columns">
                 <%# FIXME: only show bank account form, if you have confirmed your phone with us. %>
                <!-- <%= f.label :bank_account_number, 'Kontonummer' %>-->
-                <%= f.text_field :bank_account_number, { maxlength: 13, class: 'u-full-width', placeholder: '1234 56 78901' }  %>
+                <%= f.telephone_field :bank_account_number, { maxlength: 13, class: 'u-full-width', placeholder: 'xxxx xx xxxxx',  }  %>
                 <p>
                     Vi trenger ditt kontonummer for å utbetale penger til deg som utleier
                 </p>
