--- a/app/views/misc/terms.html.erb
+++ b/app/views/misc/terms.html.erb
@@ -241,7 +241,7 @@
 <p>
   Den obligatoriske forsikringen som følger med i alle leieforhold dekker  også ansvarsskader. Det vil ikke bli sendt inn bekreftelse til  Motorvognregisteret som viser dette, siden dette vil skape utfordringer når  utleiers ordinære forsikring skal ta over etter endt leieforhold. Det er derfor  viktig at bilens ordinære ansvarsforsikring er løpende.
   <br>
-  Skulle det oppstå en skade, er det viktig at skaden rapporteres umiddelbart til Plendit slik at If Skadeforsikring raskt kan  starte opp med å behandle skadesaken. For å rapportere skade, kan du bruke skademeldingsskjemaet TRANSLATEME:[som står på booking side].
+  Skulle det oppstå en skade, er det viktig at skaden rapporteres umiddelbart til Plendit slik at If Skadeforsikring raskt kan  starte opp med å behandle skadesaken. For å rapportere en skade, må du bruke skademeldingsskjemaet det linkes til i bookingen.
 </p>
 
 <p>&nbsp;</p>
