improve prosa in link for new bank_account

--- a/app/views/users/_show_user_payment_account.html.erb
+++ b/app/views/users/_show_user_payment_account.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
         <div class="twelve columns">
-            <%= link_to 'Oppdater', bank_account_users_path %>
+            <%= link_to 'Legg til nytt kontonummer', bank_account_users_path %>
         </div>
     </div>
 <%- else -%>
