remove  blue link thats not there

--- a/app/views/application_mailer/booking_created__to_owner.html.erb
+++ b/app/views/application_mailer/booking_created__to_owner.html.erb
@@ -17,5 +17,5 @@
 </table>
 
 <p>
-  Aksepter (blå knapp)      <%= link_to 'Gå til booking', booking_url( @booking )%>
+  Aksepter      <%= link_to 'Gå til booking', booking_url( @booking )%>
 </p>
