change text to inform users that they will get money back if booking does not happen

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -100,8 +100,7 @@
         <div class="help-box">
             Om du har dekning på kredittkortet ditt, sendes forespørselen
             til utleieren. Du blir kun belastet om din forespørsel blir
-            godkjent av utleier. Dersom ikke, blir pengene tilbakeført til
-            din konto.
+            godkjent av utleier. Du vil få pengene tilbake dersom leifoholdet blir avslått, abrutt eller avlyst. 
         </div>
 
 
