add depositum to booking page

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -71,6 +71,12 @@
                             </span>
                             <span class="booking-price-summary__value"></span>
                         </div>
+                        <div class="booking-price-summary__row">
+                            <span class="booking-price-summary__label">
+                                Depositum:
+                            </span>
+                            <span class="booking-price-summary__value"></span>
+                        </div>
                      </div>
                  </div>
 
