change wording frontpage

--- a/app/views/misc/frontpage.html.erb
+++ b/app/views/misc/frontpage.html.erb
@@ -45,8 +45,8 @@
             <h2>Skadeforsikring fra If</h2>
             <p>
                 Slipp alle bekymringer. Alt du leier ut på Plendit blir
-                forsikret av If, og om uhellet er ute har du som utleier ingen
-                egenandel eller bonustap.
+                forsikret av If, ved skade har har du som utleier ingen
+                egenandel.
                 <strong>
                     <%= link_to 'Les mer om forsikring', Rails.configuration.x.customerservice.insurance_info, target: '_blank' %>.
                 </strong>
