added first L18n string, should later move to using more the l18n api.

--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -2,7 +2,10 @@
 
     <%- if @user.errors.any? -%>
         <div>
-            Følgende forhindret deg i å oppdatere profilen din:
+            <%= I18n.t '.error_prevented_saving_profile',
+                default: 'Følgende forhindret deg i å oppdatere profilen din:',
+                count: @user.errors.count
+             %>
             <ul>
                 <% @user.errors.messages.each do |attribute,message| %>
                     <% message.each do |m| %>
