--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -15,7 +15,7 @@
                 <%= render partial: "unavailability", locals: {ad: @ad} %>
             </div>
 
-            <% unless user_signed_in? && !ad.user.id == current_user.id %>
+            <% if current_user.present? && @ad.user.id != current_user.id %>
                 <div class="ad-booking-box__button-holder">
                     <%= button_tag("Gå til booking", disabled: ( current_user.present? && !(current_user.can_rent? @ad.category) ), class: "button button-primary booking-request-form__book-button",  ) %>
                 </div>
