--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,8 +37,8 @@
 }
 
 .u-fill-blue {
-    fill: #2a96ff;
-    color: #2a96ff;
+    fill: $color-plendit-blue;
+    color: $color-plendit-blue;
 }
 
 .u-fill-gray {
